--- a/cli-rust/Cargo.toml
+++ b/cli-rust/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-name = "hello_world"
+name = "guimas"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap ={ version = "4.0", features = ["derive"]}
